Updated state space explorer on the website to accept the problem via PDDL.

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/Index.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/Index.razor
@@ -5,5 +5,5 @@
 <p>This page serves as an index for interactive demos and tools.</p>
 
 <ul>
-    <li><a href="lab/state-space-explorer">State space explorer - blocks world</a>: A demonstration of the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.</li>
+    <li><a href="lab/state-space-explorer">State space explorer</a>: A demonstration of (PDDL parsing and) the state space representation types to be found in the `SCClassicalPlanning.Planning.StateAndGoalSpace` namespace.</li>
 </ul>
