state space explorer tweak

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -138,7 +138,7 @@
     private Problem? problem = null;
     private LinkedList<StateSpaceEdge> path = new();
 
-    private async Task HandleFormSubmission(EditContext editContext)
+    private void HandleFormSubmission(EditContext editContext)
     {
         try
         {
