state space explorer tweaks.

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -19,9 +19,16 @@
             Use the buttons at the top of the form to populate it with example domain and problem definitions,
             using a minimal version of <a href="https://www.google.com/search?q=planning+domain+definition+language">PDDL</a>.
         </li>
-        <!--<li>Guidance for defining problems with PDDL can be found on the <a href="getting-started#writing-sentences-as-strings">getting started</a> page.</li>-->
         <li>
-            Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form. You can explore the state space by clicking on the action to apply.
+            Some guidance for defining problems as PDDL will be added to the getting started page at some point before v1.
+            For now, consult the presets and Internet resources about PDDL.
+            Note that we use an absolutely minimal version of the earliest public version of PDDL (1.2).
+            Absolutely no extensions are supported - not even typing.
+            Yet.
+        </li>
+        <li>
+            Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form.
+            You can explore the state space by clicking on the action to apply.
         </li>
         <li>
             The source code for this page can be found <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor">here</a>.
