minor docs site updates

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -10,7 +10,7 @@
 
 <div class="alert alert-primary" role="alert">
     <p>
-        This page is an interactive demonstration of PDDL parsing and the state space representation types found in the <a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a> namespace.
+        This page is an interactive demonstration of (PDDL parsing and) the state space representation types found in the <a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a> namespace.
         It runs entirely in your browser.
         Notes:
     </p>
