Bug fix to DomainInspector.GetMappingFromSchema for cases where the same var appears twice in an action.

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -133,10 +133,9 @@
             domainPddl: BlocksWorld.DomainPDDL,
             problemPddl: BlocksWorld.ExampleProblemPDDL),
 
-        // Need to fix action rendering stuff..
-        ////["Air Cargo"] = () => new(
-        ////    domainPddl: AirCargo.DomainPDDL,
-        ////    problemPddl: AirCargo.ExampleProblemPDDL),
+        ["Air Cargo"] = () => new(
+            domainPddl: AirCargo.DomainPDDL,
+            problemPddl: AirCargo.ExampleProblemPDDL),
     };
 
     private FormData formData = Presets["Blocks World"].Invoke();
