--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -27,8 +27,9 @@
             Yet.
         </li>
         <li>
-            Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form.
+            Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form, along with a link for each applicable action.
             You can explore the state space by clicking on the action to apply.
+            Prior states will remain visible, to show the path you have taken from the initial state.
         </li>
         <li>
             The source code for this page can be found <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor">here</a>.
@@ -63,7 +64,21 @@
     </div>
 </EditForm>
 
-@{
+@if (parseError != null)
+{
+    <div class="alert alert-danger mt-4" role="alert">
+        <h3>Query Failed</h3>
+        <p>
+            Sorry, this demo isn't perfect.
+            In particular, the input validation is a little lacklustre.
+            It'll hopefully improve gradually over time.
+            In case it helps, here's the details of the exception that was thrown:
+        </p>
+        <p><pre>@(parseError.ToString())</pre></p>
+    </div>
+}
+else if (problem != null)
+{
     void RenderListItem(LinkedListNode<StateSpaceEdge>? lastPathNode, StateSpaceNode stateNode, StateSpaceEdge? nextExploredEdge)
     {
         <li>
@@ -96,30 +111,14 @@
         </li>
     }
 
-    if (parseError != null)
-    {
-        <div class="alert alert-danger mt-4" role="alert">
-            <h3>Query Failed</h3>
-            <p>
-                Sorry, this demo isn't perfect.
-                In particular, the input validation is a little lacklustre.
-                It'll hopefully improve gradually over time.
-                In case it helps, here's the details of the exception that was thrown:
-            </p>
-            <p><pre>@(parseError.ToString())</pre></p>
-        </div>
-    }
-    else if (problem != null)
-    {
-        <ol class="mt-4">
-            @{RenderListItem(null, new StateSpaceNode(problem, problem.InitialState), path.First?.Value);}
+    <ol class="mt-4">
+        @{RenderListItem(null, new StateSpaceNode(problem, problem.InitialState), path.First?.Value);}
 
-            @for (var n = path.First; n != null; n = n.Next)
-            {
-                RenderListItem(n, n.Value.To, n.Next?.Value);
-            }      
-        </ol>
-    }
+        @for (var n = path.First; n != null; n = n.Next)
+        {
+            RenderListItem(n, n.Value.To, n.Next?.Value);
+        }      
+    </ol>
 }
 
 @code {
@@ -148,13 +147,13 @@
     {
         try
         {
-            problem = null;
             parseError = null;
             path.Clear();
             problem = PddlParser.ParseProblem(formData.ProblemPDDL, formData.DomainPDDL);
         }
         catch (Exception e)
         {
+            problem = null;
             parseError = e;
         }
     }
