--- a/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
@@ -16,6 +16,10 @@
     </p>
     <ul>
         <li>
+            Not advertising this until "lifted" goal space is working, and/or making use of invariants to prune obviously unsatisfiable goals.
+            If you've found it anyway.. well done, I guess.
+        </li>
+        <li>
             Use the buttons at the top of the form to populate it with example domain and problem definitions,
             using a minimal version of <a href="https://www.google.com/search?q=planning+domain+definition+language">PDDL</a>.
         </li>
