--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -37,9 +37,9 @@
     </ul>
 </div>
 
-<EditForm Model=@formData OnSubmit=@HandleFormSubmission style="font-family: monospace">
+<EditForm Model=@formData OnSubmit=@HandleFormSubmission class="row" style="font-family: monospace">
     <DataAnnotationsValidator />
-    <div class="form-group">
+    <div class="form-group col-12">
         <label>Presets</label>
         <div>
             @foreach (var kvp in Presets)
@@ -49,17 +49,17 @@
             }
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group col-md-6">
         <label for="domainPddlTextArea">Domain PDDL</label>
         <InputTextArea class="form-control small" id="domainPddlTextArea" @bind-Value=formData.DomainPDDL rows="12" />
         <ValidationMessage For="@(() => formData.DomainPDDL)" />
     </div>
-    <div class="form-group">
+    <div class="form-group col-md-6">
         <label for="problemPddlTextArea">Problem PDDL</label>
         <InputTextArea class="form-control small" id="factsTextArea" @bind-Value=formData.ProblemPDDL rows="12" />
         <ValidationMessage For="@(() => formData.ProblemPDDL)" />
     </div>
-    <div class="form-group mt-2">
+    <div class="form-group mt-2 col-12">
         <button type="submit" class="btn btn-primary">Submit / Reset</button>
     </div>
 </EditForm>
