Added some form validation to the lab page(s).

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
@@ -100,20 +100,7 @@
         </li>
     }
 
-    if (parseError != null)
-    {
-        <div class="alert alert-danger mt-4" role="alert">
-            <h3>Query Failed</h3>
-            <p>
-                Sorry, this demo isn't perfect.
-                In particular, the input validation is a little lacklustre.
-                It'll hopefully improve gradually over time.
-                In case it helps, here's the details of the exception that was thrown:
-            </p>
-            <p><pre>@(parseError.ToString())</pre></p>
-        </div>
-    }
-    else if (problem != null)
+    if (problem != null)
     {
         <ol class="mt-4">
             @{
@@ -152,16 +139,12 @@
 
     private void HandleFormSubmission(EditContext editContext)
     {
-        try
+        problem = null;
+        path.Clear();
+
+        if (editContext.Validate())
         {
-            problem = null;
-            parseError = null;
-            path.Clear();
             problem = PddlParser.ParseProblem(formData.ProblemPDDL, formData.DomainPDDL);
-        }
-        catch (Exception e)
-        {
-            parseError = e;
         }
     }
 
@@ -184,7 +167,7 @@
         path.AddLast(edge);
     }
 
-    private class FormData
+    private class FormData : IValidatableObject
     {
         public FormData(string domainPddl, string problemPddl)
         {
@@ -195,5 +178,34 @@
         public string DomainPDDL { get; set; }
 
         public string ProblemPDDL { get; set; }
+
+        public IEnumerable<ValidationResult> Validate(ValidationContext validationContext)
+        {
+            // Yes, could cache the parse results to avoid parsing multiple times, but not worth it for now at least.
+            // TODO: Some "TryParse.." methods might be useful - they'd certainly make this method a bit cleaner.
+            // TODO: If we had a ParseError exception type, we could perhaps highlight the offending text..
+            Domain? domain = null;
+            Problem? problem = null;
+            List<ValidationResult> errors = new();
+            try
+            {
+                domain = PddlParser.ParseDomain(DomainPDDL);
+
+                try
+                {
+                    problem = PddlParser.ParseProblem(ProblemPDDL, domain!);
+                }
+                catch (Exception e)
+                {
+                    errors.Add(new ValidationResult(e.Message, new[] { nameof(ProblemPDDL) }));
+                }
+            }
+            catch (Exception e)
+            {
+                errors.Add(new ValidationResult(e.Message, new[] { nameof(DomainPDDL) }));
+            }
+
+            return errors;
+        }
     }
 }
