.. in my defense, I'm really more of a back-end guy.

--- a/src/SCClassicalPlanning.Documentation/wwwroot/app.css
+++ b/src/SCClassicalPlanning.Documentation/wwwroot/app.css
@@ -1,4 +1,5 @@
-﻿@import url('/lib/bootstrap-icons/font/bootstrap-icons.min.css');
+﻿@import url('css/bootstrap/bootstrap.min.css');
+@import url('lib/bootstrap-icons/font/bootstrap-icons.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
