Docs site updates

--- a/src/SCClassicalPlanning.Documentation/Shared/MainLayout.razor
+++ b/src/SCClassicalPlanning.Documentation/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
     <main>
         <div class="top-row px-4">
             <a href="https://www.nuget.org/packages/SCClassicalPlanning/"><img src="https://img.shields.io/nuget/v/SCClassicalPlanning.svg?style=flat-square" alt="NuGet version (SCClassicalPlanning)"/></a>
-            <a href="https://github.com/sdcondon/SCClassicalPlanning"><img src="GitHub-Mark-32px.png" alt="GitHub Repository (SCClassicalPlanning)"/></a>
+            <a href="https://github.com/sdcondon/SCClassicalPlanning"><img src="img/GitHub-Mark-32px.png" alt="GitHub Repository (SCClassicalPlanning)"/></a>
         </div>
 
         <article class="content px-4">
@@ -27,9 +27,7 @@
 
                 <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"></a>
 
-                <ul class="nav col-md-4 justify-content-end text-muted">
-                    <li class="nav-item"><a href="https://sdcondon.net" class="nav-link px-2 text-muted">&copy; 2023 Simon Condon</a></li>
-                </ul>
+                <div class="nav col-md-4 justify-content-end text-muted">&copy; 2023 Simon Condon</div>
             </footer>
         </article>
     </main>
