--- a/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor
@@ -6,36 +6,46 @@
 @using SCClassicalPlanning.ProblemCreation;
 @using System.ComponentModel.DataAnnotations;
 
-<h3>State Space Explorer</h3>
+<h3>State Space Explorer <a data-bs-toggle="modal" data-bs-target="#explanationModal" href="#"><span class="bi bi-info-circle" aria-hidden="true"></span></a></h3>
 
-<div class="alert alert-primary" role="alert">
-    <p>
-        This page is an interactive demonstration of (PDDL parsing and) the state space representation types found in the <a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a> namespace.
-        It runs entirely in your browser.
-        Notes:
-    </p>
-    <ul>
-        <li>
-            Use the buttons at the top of the form to populate it with example domain and problem definitions,
-            using a minimal version of <a href="https://www.google.com/search?q=planning+domain+definition+language">PDDL</a>.
-        </li>
-        <li>
-            Some guidance for defining problems as PDDL will be added to the getting started page at some point before v1.
-            For now, consult the presets and Internet resources about PDDL.
-            Note that we use an absolutely minimal version of the earliest public version of PDDL (1.2).
-            Absolutely no extensions are supported - not even typing.
-            Yet.
-        </li>
-        <li>
-            Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form, along with a link for each applicable action.
-            You can explore the state space by clicking on the action to apply.
-            Prior states will remain visible, to show the path you have taken from the initial state.
-            A "GOAL MET!" message will be shown if you reach a state that satisfies the goal.
-        </li>
-        <li>
-            The source code for this page can be found <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor">here</a>.
-        </li>
-    </ul>
+<div class="modal fade" id="explanationModal" tabindex="-1" aria-labelledby="explanationModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="explanationModalLabel">Explanation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    This page is an interactive demonstration of (PDDL parsing and) the state space representation types found in the <a href="https://github.com/sdcondon/SCClassicalPlanning/tree/main/src/SCClassicalPlanning/Planning/StateAndGoalSpace">SCClassicalPlanning.Planning.StateAndGoalSpace</a> namespace.
+                    It runs entirely in your browser.
+                    Notes:
+                </p>
+                <ul>
+                    <li>
+                        Use the buttons at the top of the form to populate it with example domain and problem definitions,
+                        using a minimal version of <a href="https://www.google.com/search?q=planning+domain+definition+language">PDDL</a>.
+                    </li>
+                    <li>
+                        Some guidance for defining problems as PDDL will be added to the getting started page at some point before v1.
+                        For now, consult the presets and Internet resources about PDDL.
+                        Note that we use an absolutely minimal version of the earliest public version of PDDL (1.2).
+                        Absolutely no extensions are supported - not even typing.
+                        Yet.
+                    </li>
+                    <li>
+                        Once the problem definition has been submitted, a representation of the initial state of the problem will appear below the form, along with a link for each applicable action.
+                        You can explore the state space by clicking on the action to apply.
+                        Prior states will remain visible, to show the path you have taken from the initial state.
+                        A "GOAL MET!" message will be shown if you reach a state that satisfies the goal.
+                    </li>
+                    <li>
+                        The source code for this page can be found <a href="https://github.com/sdcondon/SCClassicalPlanning/blob/main/src/SCClassicalPlanning.Documentation/Pages/lab/StateSpaceExplorer.razor">here</a>.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 <EditForm Model=@formData OnSubmit=@HandleFormSubmission class="row" style="font-family: monospace">
