a couple of things:
* updated code to account for breaking changes in firstorderlogic v5
* rolled back antlr4buildtasks a bit to avoid system.collections.immutable version conflict

--- a/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
+++ b/src/SCClassicalPlanning.Documentation/Pages/lab/GoalSpaceExplorer.razor
@@ -88,7 +88,7 @@
             @{
                 // richer formatting functionality could make this more succinct, which would be nice..
                 var goalElements = goalNode.Goal.Elements
-                .OrderBy(e => e.Predicate.Symbol.ToString())
+                .OrderBy(e => e.Predicate.Identifier.ToString())
                 .ThenBy(e => string.Join(",", e.Predicate.Arguments.Select(a => a.ToString())));
             }
             @string.Join(" ∧ ", goalElements);
